rdcyis/static/css/main.css
/* ... */
.dataTables_wrapper .dataTables_paginate .paginate_button {
    box-sizing: border-box;
    display: inline-block;
    min-width: 1.5em;
    padding: 0.1em 0.55em;
    margin-left: 2px;
    text-align: center;
    text-decoration: none !important;
    cursor: pointer;
    *cursor: hand;
    color: #333 !important;
    border: 1px solid transparent;
    border-radius: 2px;
}

.dataTables_wrapper .dataTables_filter input {
    margin-left: 0.5em;
    border: 2px solid #ddd;
}


.training-title h1 {
    font-size: 24px;
    font-weight: 600;
    margin-bottom: 25px;
    padding-bottom: 0;
    color: #435b7c;
}

.training-filter-box {
  border: 2px solid #ddd;
  border-radius: 1px;
  background-color: #f8f9fa;
  padding: 10px;

}

.training-filter-title{
  font-size: 16px;
  font-weight: 600;
  color: #435b7c;
  border-bottom: 1px solid #dcdcdc;
  margin-bottom: 15px;
}

.training-filter-box p{
  font-size: 14px;
  font-weight: 500;
  color: #444;
}

.training-filter-by {
  border-bottom: 1px solid #ddd;
  margin-bottom: 15px;
}

.training-filter-by p{
  font-size: 14px;
  font-weight: 600;
  margin-bottom: 5px;
  color: #435b7c;
}

.training-filter-by label{
  font-size: 12px;
  font-weight: 500;
  margin-left: 10px;
}

.training-list{
  border-bottom: dotted 1px #CCC;
}

.training-content-month {
  background: #ddd;
  color: #FFF;
  font-size: 0.9em;
  line-height: 1.25em;
  text-align: center;
}

.training-content-year {
  background: #CCC;
  color: #FFF;
  font-size: 1.4em;
  font-weight: bold;
  text-align: center;
}

.training-content a {
  font-family: 'Questrial', sans-serif;
  font-size: 16px;
  font-weight: 600;
  margin-bottom: 20px;
  padding-bottom: 0;
  color: #435b7c
}

.training-content p {
  font-size: 12px;
  font-weight: 500;
  color: #212529;
  margin-bottom: 1px;
}

.training-detail p{
  font-size: 12px;
}

.training-detail h2 {
    font-size: 26px;
    font-weight: 600;
    color: #1c5c93;
}

.highlight-icon {
  text-align: center;
}
.highlight-icon img{
  height: 150px;
}

.map-1{
  height: 550px;
  width: 100%;
}
.map-2{
  height: 550px;
  width: 100%;
}

.menu-tab {
  text-align: center;
  cursor: pointer;
  font-size: 16px;
  font-weight: 600;
}

.menu-tab.active{
  border-top: 3px solid #FFF;
}

.intensity-class {
  width: 20px;
  height: 20px;
}

.legend-list ul{
  list-style:none;
  padding-left:0;
  font-size: 14px;
}

.show-element{
  display: block;
}
.hide-element{
  display: none;
}

/* *********************************************************************************** */
[type="radio"]:checked,
[type="radio"]:not(:checked) {
    position: absolute;
    left: -9999px;
}
[type="radio"]:checked + label,
[type="radio"]:not(:checked) + label
{
    position: relative;
    padding-left: 28px;
    cursor: pointer;
    line-height: 20px;
    display: inline-block;
    color: #666;
}
[type="radio"]:checked + label:before,
[type="radio"]:not(:checked) + label:before {
    content: '';
    position: absolute;
    left: 0;
    top: 0;
    width: 18px;
    height: 18px;
    border: 1px solid #ddd;
    border-radius: 100%;
    background: #fff;
}
[type="radio"]:checked + label:after,
[type="radio"]:not(:checked) + label:after {
    content: '';
    width: 12px;
    height: 12px;
    background: #5d4f3f;
    position: absolute;
    top: 2.7px;
    left: 3.5px;
    border-radius: 100%;
    -webkit-transition: all 0.2s ease;
    transition: all 0.2s ease;
}
[type="radio"]:not(:checked) + label:after {
    opacity: 0;
    -webkit-transform: scale(0);
    transform: scale(0);
}
[type="radio"]:checked + label:after {
    opacity: 1;
    -webkit-transform: scale(1);
    transform: scale(1);
}

/* *********************************************************************************** */

.btn-color1{
  color: #FFF;
  background-color: #474e47;
  border-color: #474e47;
  font-size: 14px;
}

.btn-color2{
  color: #FFF;
  background-color: #969083;
  border-color: #969083;
  font-size: 14px;
}

.btn-color3{
  color: #FFF;
  background-color: #877664;
  border-color: #877664;
  font-size: 14px;
}

.btn-color4{
  color: #FFF;
  background-color: #36210f;
  border-color: #36210f;
  font-size: 14px;
}

.legend-list ul li{
  margin-bottom: 3px;
}

